fixed alignment on nav

--- a/review/app/assets/stylesheets/books.css.scss
+++ b/review/app/assets/stylesheets/books.css.scss
@@ -2,14 +2,40 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+h1 {
+  margin-top:10px;
+  color:#3C68B4;
+  font-weight:450;
+}
+h2 {
+  text-align:center;
+}
+.navbar-form {
+  margin-top:12px;
+}
+.nav-back {
+  background-color:#F9F9F9;
+  border-bottom: 1px solid #444;
+}
 .space-8 {
   margin-top:80px;
 }
 .space-4-bot {
   margin-bottom:40px;
 }
+.space-1-top {
+  margin-top:10px;
+}
+.space-2-top {
+  margin-top: 10px;
+}
+.space-right {
+  margin-right:10px;
+}
 .main-back {
   background-color: #eee;
+  padding-top:50px;
+  margin-top:20px;
 }
 #navbar {
   color:white;
